--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,29 +1,28 @@
 {
   "pages": [
     "pages/splash/splash",
-    "pages/orderList/orderList",
+    "pages/buy/buy",
+    "pages/recharge/recharge",
+    
     "pages/index/index",
-    
-    "pages/splash2/splash2",
-    
-    "pages/card/card",
     "pages/wallet/wallet",
     "pages/login/login",
-    
+    "pages/splash2/splash2",
+    "pages/card/card",
     "pages/my/my",
-    
+    "pages/orderList/orderList",
     "pages/myInfo/myInfo",
     "pages/orderForm/orderForm",
     "pages/pay/pay",
     "pages/appointment/appointment",
     "pages/detail/detail"
-   
+    
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
+    "navigationBarTitleText": "TEMA题墨",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
