--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,6 @@
     "pages/splash/splash",
     "pages/buy/buy",
     "pages/recharge/recharge",
-    
     "pages/index/index",
     "pages/wallet/wallet",
     "pages/login/login",
@@ -16,8 +15,8 @@
     "pages/orderFormCard/orderFormCard",
     "pages/pay/pay",
     "pages/appointment/appointment",
-    "pages/detail/detail"
-    
+    "pages/detail/detail",
+    "pages/exchange/exchange"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -27,20 +26,21 @@
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
-    "list": [
-      {
-        "pagePath": "pages/index/index",
-        "text": "首页"
-      },
-      {
-        "pagePath": "pages/orderList/orderList",
-        "text": "订单"
-      },
-      {
-        "pagePath": "pages/my/my",
-        "text": "我的"
-      }
-    ]
+    "list": [{
+      "pagePath": "pages/index/index",
+      "text": "首页"
+    }, {
+      "pagePath": "pages/orderList/orderList",
+      "text": "订单"
+    }, {
+      "pagePath": "pages/my/my",
+      "text": "我的"
+    }]
+  },
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于计算茶室位置导航信息展示"
+    }
   },
   "sitemapLocation": "sitemap.json"
 }
